--- a/new_creator.html
+++ b/new_creator.html
@@ -17,7 +17,7 @@
     <body>
       <nav>
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">IDAT</a>
+          <a href="index.html" class="brand-logo">IDAT</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="new_creator.html">New Creator</a></li>
             <li><a href="new_thing.html">New Thing</a></li>
