--- a/new_creator.html
+++ b/new_creator.html
@@ -25,6 +25,6 @@
         </ul>
       </div>
     </nav>
-    NEW CREATOR FORM
+    <iframe class="airtable-embed" src="https://airtable.com/embed/shrmnfsu02wF1b8nS?backgroundColor=green" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
   </body>
 </html>
