--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         </ul>
       </div>
     </nav>
-    HELLO IDAT
+    <container>
+      <h1>I Did A Thing!</h1>
+      <h2>Stay Tuned for launch: SUBSCRIBE!</h2>
+      <form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/IDAT" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/IDAT', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
+
+    </container>
   </body>
 </html>
