updating folders and js

--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
   </head>
 
   <body>
-    <!-- Compiled and minified JavaScript -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
     <!-- Nav -->
     <nav>
       <div class="nav-wrapper teal">
-        <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="mobile-menu" class="button-collapse kc-dropdown"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a class=
             "btn black" href="new_creator.html">New Creator</a></li>
@@ -30,12 +27,9 @@
             "btn black" href="about.html">About</a></li>
         </ul>
       <ul class="side-nav" id="mobile-menu">
-        <li><a class=
-            "btn black" href="new_creator.html">New Creator</a></li>
-          <li><a class=
-            "btn black" href="new_thing.html">New Thing</a></li>
-          <li><a class=
-            "btn black" href="about.html">About</a></li>
+        <li><a href="new_creator.html">New Creator</a></li>
+          <li><a href="new_thing.html">New Thing</a></li>
+          <li><a href="about.html">About</a></li>
       </ul>
         <a href="index.html" class="brand-logo brand-heading">IDAT</a>
       </div>
@@ -59,6 +53,9 @@
         <p class="summary">Right now, we're collecting info on all QPOC Creators who would like to share their work! <a href="new_creator.html">Submit your Creator info!</a> Then, <a href="new_thing.html">Submit your thing!!</a></p>
       </div class="section">
     </div class="container">
-
+  <!-- Compiled and minified JavaScript -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
