--- a/new_thing.html
+++ b/new_thing.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>IDAT | I Did A Thing</title>
+    <!--Import Fonts -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Amatic+SC|Press+Start+2P|Zilla+Slab+Highlight" rel="stylesheet">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
 
   <body>
+    <!-- Compiled and minified JavaScript -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+    <!-- Nav -->
     <nav>
-      <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo">IDAT</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="new_creator.html">New Creator</a></li>
+      <div class="nav-wrapper teal">
+        <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a class=
+            "btn black" href="new_creator.html">New Creator</a></li>
+          <li><a class=
+            "btn black" href="new_thing.html">New Thing</a></li>
+          <li><a class=
+            "btn black" href="about.html">About</a></li>
+        </ul>
+      <ul class="side-nav" id="mobile-menu">
+        <li><a href="new_creator.html">New Creator</a></li>
           <li><a href="new_thing.html">New Thing</a></li>
           <li><a href="about.html">About</a></li>
-        </ul>
+      </ul>
+        <a href="index.html" class="brand-logo brand-heading">IDAT</a>
       </div>
     </nav>
-    <iframe class="airtable-embed" src="https://airtable.com/embed/shr3bMOHzbkwwHNqI?backgroundColor=green" 
+    <div class="container">
+      <iframe class="airtable-embed" src="https://airtable.com/embed/shr3bMOHzbkwwHNqI?backgroundColor=green"
       frameborder="0" onmousewheel="" width="533px" height="100%" style="background: transparent; border: 1px solid #ccc;">
-    </iframe>
+      </iframe>
+    </div>
+
   </body>
 </html>
