updates favicon content

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <!-- Icon things -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://karaajc.github.io/idat/assets/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://karaajc.github.io/idat/assets/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="https://karaajc.github.io/idat/assets/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="https://karaajc.github.io/idat/assets/favicon-16x16.png" sizes="16x16" />
+    <meta name="application-name" content="IDAT | I Did A Thing"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="https://karaajc.github.io/idat/assets/mstile-144x144.png" />
+
   </head>
 
   <body>
