updating site with marketing images

--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Meta Info -->
+    <meta charset="utf-8">
     <title>IDAT | I Did A Thing</title>
+    <!-- Search Engine -->
+    <meta name="description" content="A Daily Dose of QPOC awesomeness">
+    <meta name="image" content="https://karaajc.github.io/idat/IDAT-Card">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="IDAT | I Did A Thing">
+    <meta itemprop="description" content="A Daily Dose of QPOC awesomeness">
+    <meta itemprop="image" content="https://karaajc.github.io/idat/IDAT-Card">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="IDAT | I Did A Thing">
+    <meta name="twitter:description" content="A Daily Dose of QPOC awesomeness">
+    <meta name="twitter:site" content="@IDATbot">
+    <meta name="twitter:creator" content="@KaraAJC">
+    <meta name="twitter:image:src" content="https://karaajc.github.io/idat/IDAT-Card">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="IDAT | I Did A Thing">
+    <meta name="og:description" content="A Daily Dose of QPOC awesomeness">
+    <meta name="og:image" content="https://karaajc.github.io/idat/IDAT-Card">
+    <meta name="og:url" content="https://KaraAJC.github.io/idat">
+    <meta name="og:site_name" content="I Did A Thing">
+    <meta name="og:type" content="website">
+
     <!--Import Fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Amatic+SC|Press+Start+2P|Zilla+Slab+Highlight" rel="stylesheet">
 
@@ -46,6 +70,7 @@
     </nav>
 
     <!-- Main -->
+    <img class="main-banner" src="assets/IDAT-banner.png">
     <div class="container">
       <div class="section">
         <h1 class="brand-heading">I Did A Thing!</h1>
