updates about pg and replaces home banner

--- a/about.html
+++ b/about.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IDAT | I Did A Thing</title>
+    <!-- Meta Info -->
+    <meta charset="utf-8">
+    <title>About IDAT | I Did A Thing</title>
+    <!-- Search Engine -->
+    <meta name="description" content="A Daily Dose of QPOC awesomeness">
+    <meta name="image" content="https://karaajc.github.io/idat/IDAT-Card">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="IDAT | I Did A Thing">
+    <meta itemprop="description" content="A Daily Dose of QPOC awesomeness">
+    <meta itemprop="image" content="https://karaajc.github.io/idat/IDAT-Card">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="About IDAT | I Did A Thing">
+    <meta name="twitter:description" content="A Daily Dose of QPOC awesomeness">
+    <meta name="twitter:site" content="@IDATbot">
+    <meta name="twitter:creator" content="@KaraAJC">
+    <meta name="twitter:image:src" content="https://karaajc.github.io/idat/IDAT-Card">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="About IDAT | I Did A Thing">
+    <meta name="og:description" content="A Daily Dose of QPOC awesomeness">
+    <meta name="og:image" content="https://karaajc.github.io/idat/IDAT-Card">
+    <meta name="og:url" content="https://KaraAJC.github.io/idat">
+    <meta name="og:site_name" content="I Did A Thing">
+    <meta name="og:type" content="website">
+
     <!--Import Fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Amatic+SC|Press+Start+2P|Zilla+Slab+Highlight" rel="stylesheet">
 
@@ -11,16 +35,23 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <!-- Icon things -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://karaajc.github.io/idat/assets/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://karaajc.github.io/idat/assets/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="https://karaajc.github.io/idat/assets/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="https://karaajc.github.io/idat/assets/favicon-16x16.png" sizes="16x16" />
+    <meta name="application-name" content="IDAT | I Did A Thing"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="https://karaajc.github.io/idat/assets/mstile-144x144.png" />
+
   </head>
 
   <body>
-    <!-- Compiled and minified JavaScript -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
     <!-- Nav -->
     <nav>
       <div class="nav-wrapper teal">
-        <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="mobile-menu" class="button-collapse kc-dropdown"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a class=
             "btn black" href="new_creator.html">New Creator</a></li>
@@ -30,12 +61,9 @@
             "btn black" href="about.html">About</a></li>
         </ul>
       <ul class="side-nav" id="mobile-menu">
-        <li><a class=
-            "btn black" href="new_creator.html">New Creator</a></li>
-          <li><a class=
-            "btn black" href="new_thing.html">New Thing</a></li>
-          <li><a class=
-            "btn black" href="about.html">About</a></li>
+        <li><a href="new_creator.html">New Creator</a></li>
+          <li><a href="new_thing.html">New Thing</a></li>
+          <li><a href="about.html">About</a></li>
       </ul>
         <a href="index.html" class="brand-logo brand-heading">IDAT</a>
       </div>
@@ -47,8 +75,22 @@
         <h1 class="brand-heading">About IDAT</h1>
         <p class="summary"><span class="teal">IDAT</span> is a daily dose of awesome things made by Queer, Trans, Non-Binary folks who are Black or Non-Black People Of Color!</p>
         <p class="summary">You'll be able to <span class="teal">Amplify</span> their work, <span class="teal">Celebrate</span> their achievement, and <span class="teal">Support</span> them financially or any way they see fit.</p>
-        <p class="summary"><span class="teal">IDAT</span> Was an Idea that sprang out of my participation in the 2017 Write/Speak/Code Conference in Portland, OR. As an alumnx of the conference, we were tasked with coming up with and working on a project. By that time, we were on day Two of the conference, and I'd already seen and referred to SO MANY amazing things that fellow QBPOC and QNBPOC have done, that I wanted to make sure it was something that could happen year round.</p>
-        <p class="summary">The goal of IDAT is to collect and distribute all the things, from zines, twitter threads, presentations, github projects, and other accomplishments of all sizes to an audience who wants to share, support, contribute, buy, and celebrate that work, while giving a short timeframe on it.</p>
+        <p class="summary"><span class="teal">IDAT</span> was an Idea that sprang out of my participation in the <a href="">2017 Write/Speak/Code Conference</a> in Portland, OR. As an alumnx of the conference, we were tasked with coming up with and working on a project. By that time, we were on day two of the conference, and I'd already seen and referred to SO MANY amazing things that fellow QBPOC and QNBPOC have done, that I wanted to build something that would share them year round.</p>
+        <h2 class="brand-heading">#Goals:</h2>
+        <p class="summary">The goal of IDAT is to collect and distribute all the things, from zines and twitter threads, to presentations, github projects, and other accomplishments of all sizes and deliver them to an audience who wants to share, support, contribute, buy, and celebrate that work, while giving a short 24-hr timeframe on it.</p>
+        <p class="summary">Right now, I'm seeking Creators to share the things they've made so I can collect enough to buffer out a great month's worth schedule of things to share, and I'm building out the distribution channels via Tiny Letter and a website, that will show a given thing for a 24-hr span, and let subscribers Buy, Share, or Support the creator.</p>
+        <p class="summary">I'm also building out a Twitter bot named <span class="teal">IDATbot</span> to be a source for creators and fans to let me know about more things to put on the schedule.</p>
+        <h2 class="brand-heading">WHO DIS?</h2>
+        <p class="summary">I DAT IdeaFox & Creator, <span class="teal">Kara Carrell</span>. I'm a Queer Blaxican developer and communitechie obsessed with Avocadoes, git, and using emoji. You can find out more about me on <a href="https://karaAJC.github.io/">my website</a>, or you can hit me on the <span class="teal">Twitter</span>Buzz at <a href="https://www.twitter.com/KaraAJC">@KaraAJC</a>.<br> <span class="teal">#</span><a href="mailto:KaraAJC@gmail.com">HireMe</a>.</p>
+        <h2 class="brand-heading">How you can help:</h2>
+        <p class="summary">If you'd like to support me, you can:
+          <ul>
+            <li><i class="material-icons teal-text">star</i>Signal Boost</li>
+            <li><i class="material-icons teal-text">star</i>Subscribe to the Tiny Letter</li>
+            <li><i class="material-icons teal-text">star</i>Follow IDATbot on Twitter</li>
+            <li><i class="material-icons teal-text">star</i>Contribute to the project via Github</li>
+          </ul>
+        </p>
       </div>
 
       <div class="section">
@@ -59,7 +101,7 @@
 
         <div class="divider"></div>
         <h2 class="brand-heading">Are YOU a QPOC Creator?<br/>Let Us Know!</h2>
-        <p class="summary">Right now, we're collecting info on all QPOC Creators who would like to share their work! <a href="new_creator.html">Submit your Creator info!</a> Then, <a href="new_thing.html">Submit your thing!!</a></p>
+        <p class="summary">Right now, we're collecting info on all QPOC Creators who would like to share their work! <a href="new_creator.html">Submit your Creator info!</a> Then, <a href="new_thing.html">Submit your thing!</a></p>
       </div>
     </div>
 
