--- a/new_creator.html
+++ b/new_creator.html
@@ -3,23 +3,23 @@
   <head>
     <!-- Meta Info -->
     <meta charset="utf-8">
-    <title>About IDAT | I Did A Thing</title>
+    <title>New Creator | I Did A Thing</title>
     <!-- Search Engine -->
     <meta name="description" content="A Daily Dose of QPOC awesomeness">
     <meta name="image" content="https://karaajc.github.io/idat/IDAT-Card">
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="IDAT | I Did A Thing">
+    <meta itemprop="name" content="New Creator | I Did A Thing">
     <meta itemprop="description" content="A Daily Dose of QPOC awesomeness">
     <meta itemprop="image" content="https://karaajc.github.io/idat/IDAT-Card">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="About IDAT | I Did A Thing">
+    <meta name="twitter:title" content="New Creator | I Did A Thing">
     <meta name="twitter:description" content="A Daily Dose of QPOC awesomeness">
     <meta name="twitter:site" content="@IDATbot">
     <meta name="twitter:creator" content="@KaraAJC">
     <meta name="twitter:image:src" content="https://karaajc.github.io/idat/IDAT-Card">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="About IDAT | I Did A Thing">
+    <meta name="og:title" content="New Creator | I Did A Thing">
     <meta name="og:description" content="A Daily Dose of QPOC awesomeness">
     <meta name="og:image" content="https://karaajc.github.io/idat/IDAT-Card">
     <meta name="og:url" content="https://KaraAJC.github.io/idat">
@@ -75,7 +75,7 @@
       </div>
       <div class="divider"></div>
       <div class="section">
-        <iframe class="airtable-embed" src="https://airtable.com/embed/shrmnfsu02wF1b8nS?backgroundColor=green" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+        <iframe class="airtable-embed" src="https://airtable.com/embed/shrmnfsu02wF1b8nS?backgroundColor=green" frameborder="0" onmousewheel="" width="100%" height="500px" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
     </div>
   </body>
