--- a/new_thing.html
+++ b/new_thing.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IDAT | I Did A Thing</title>
+    <!-- Meta Info -->
+    <meta charset="utf-8">
+    <title>New Thing | I Did A Thing</title>
+    <!-- Search Engine -->
+    <meta name="description" content="A Daily Dose of QPOC awesomeness">
+    <meta name="image" content="https://karaajc.github.io/idat/IDAT-Card">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="IDAT | I Did A Thing">
+    <meta itemprop="description" content="A Daily Dose of QPOC awesomeness">
+    <meta itemprop="image" content="https://karaajc.github.io/idat/IDAT-Card">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="New Thing | I Did A Thing">
+    <meta name="twitter:description" content="A Daily Dose of QPOC awesomeness">
+    <meta name="twitter:site" content="@IDATbot">
+    <meta name="twitter:creator" content="@KaraAJC">
+    <meta name="twitter:image:src" content="https://karaajc.github.io/idat/IDAT-Card">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="New Thing | I Did A Thing">
+    <meta name="og:description" content="A Daily Dose of QPOC awesomeness">
+    <meta name="og:image" content="https://karaajc.github.io/idat/IDAT-Card">
+    <meta name="og:url" content="https://KaraAJC.github.io/idat">
+    <meta name="og:site_name" content="I Did A Thing">
+    <meta name="og:type" content="website">
+
     <!--Import Fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Amatic+SC|Press+Start+2P|Zilla+Slab+Highlight" rel="stylesheet">
 
@@ -11,16 +35,23 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <!-- Icon things -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://karaajc.github.io/idat/assets/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://karaajc.github.io/idat/assets/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="https://karaajc.github.io/idat/assets/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="https://karaajc.github.io/idat/assets/favicon-16x16.png" sizes="16x16" />
+    <meta name="application-name" content="IDAT | I Did A Thing"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="https://karaajc.github.io/idat/assets/mstile-144x144.png" />
+
   </head>
 
   <body>
-    <!-- Compiled and minified JavaScript -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
     <!-- Nav -->
     <nav>
       <div class="nav-wrapper teal">
-        <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="mobile-menu" class="button-collapse kc-dropdown"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a class=
             "btn black" href="new_creator.html">New Creator</a></li>
@@ -38,9 +69,17 @@
       </div>
     </nav>
     <div class="container">
-      <iframe class="airtable-embed" src="https://airtable.com/embed/shr3bMOHzbkwwHNqI?backgroundColor=green"
-      frameborder="0" onmousewheel="" width="533px" height="100%" style="background: transparent; border: 1px solid #ccc;">
-      </iframe>
+      <div class="section">
+        <h1 class="brand-heading">Submit a Thing!</h1>
+        <p class="summary"></p>
+        <p class="summary">Note: This is for Queer, Trans, Non-Binary folks who are Black or Non-Black People Of Color.<br>Not you? <a href="">Here's other places you can signal boost!</a><br>Otherwise, <span class="teal">ItYou?</span><br> Haay fam! Fill out the below form!</p> <p class="summary">Questions or concerns? <a href="">Get at me!</a></p>
+      </div>
+      <div class="divider"></div>
+      <div class="section">
+        <iframe class="airtable-embed" src="https://airtable.com/embed/shr3bMOHzbkwwHNqI?backgroundColor=green"
+        frameborder="0" onmousewheel="" width="100%" height="500px" style="background: transparent; border: 1px solid #ccc;">
+        </iframe>
+      </div>
     </div>
 
   </body>
