updating readme and card img link

--- a/about.html
+++ b/about.html
@@ -6,22 +6,22 @@
     <title>About IDAT | I Did A Thing</title>
     <!-- Search Engine -->
     <meta name="description" content="A Daily Dose of QPOC awesomeness">
-    <meta name="image" content="https://karaajc.github.io/idat/IDAT-Card.png">
+    <meta name="image" content="https://karaajc.github.io/idat/assets/IDAT-Card.png">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="IDAT | I Did A Thing">
     <meta itemprop="description" content="A Daily Dose of QPOC awesomeness">
-    <meta itemprop="image" content="https://karaajc.github.io/idat/IDAT-Card.png">
+    <meta itemprop="image" content="https://karaajc.github.io/idat/assets/IDAT-Card.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="About IDAT | I Did A Thing">
     <meta name="twitter:description" content="A Daily Dose of QPOC awesomeness">
     <meta name="twitter:site" content="@IDATbot">
     <meta name="twitter:creator" content="@KaraAJC">
-    <meta name="twitter:image:src" content="https://karaajc.github.io/idat/IDAT-Card.png">
+    <meta name="twitter:image:src" content="https://karaajc.github.io/idat/assets/IDAT-Card.png">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="About IDAT | I Did A Thing">
     <meta name="og:description" content="A Daily Dose of QPOC awesomeness">
-    <meta name="og:image" content="https://karaajc.github.io/idat/IDAT-Card.png">
+    <meta name="og:image" content="https://karaajc.github.io/idat/assets/IDAT-Card.png">
     <meta name="og:url" content="https://KaraAJC.github.io/idat">
     <meta name="og:site_name" content="I Did A Thing">
     <meta name="og:type" content="website">
