--- a/new_creator.html
+++ b/new_creator.html
@@ -41,6 +41,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://karaajc.github.io/idat/assets/apple-touch-icon-152x152.png" />
     <link rel="icon" type="image/png" href="https://karaajc.github.io/idat/assets/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="https://karaajc.github.io/idat/assets/favicon-16x16.png" sizes="16x16" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
     <meta name="application-name" content="IDAT | I Did A Thing"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="https://karaajc.github.io/idat/assets/mstile-144x144.png" />
