updates repo with template

--- a/new_creator.html
+++ b/new_creator.html
@@ -72,12 +72,13 @@
     <div class="container">
       <div class="section">
         <h1 class="brand-heading">Welcome, Creator!</h1>
-        <p class="summary">Note: This is for Queer, Trans, Non-Binary folks who are Black or Non-Black People Of Color.<br>Not you? <a href="">Here's other places you can signal boost!</a><br>Otherwise, <span class="teal">ItYou?</span><br> Haay fam! Fill out the below form!</p> <p class="summary">Questions or concerns? <a href="">Get at me!</a></p>
+        <p class="summary">Note: This is for Queer, Trans, Non-Binary folks who are Black or Non-Black People Of Color.<br>Not you? <a href="#">Here's other places you can signal boost!</a><em>*coming soon</em><br>Otherwise, <span class="teal">ItYou?</span><br> Haay fam! Fill out the below form!</p> <p class="summary">Questions or concerns? <a href="">Get at me!</a></p>
       </div>
       <div class="divider"></div>
       <div class="section">
         <iframe class="airtable-embed" src="https://airtable.com/embed/shrmnfsu02wF1b8nS?backgroundColor=green" frameborder="0" onmousewheel="" width="100%" height="500px" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
+
     </div>
   </body>
 </html>
