--- a/new_thing.html
+++ b/new_thing.html
@@ -73,7 +73,7 @@
       <div class="section">
         <h1 class="brand-heading">Submit a Thing!</h1>
         <p class="summary"></p>
-        <p class="summary">Note: This is for Queer, Trans, Non-Binary folks who are Black or Non-Black People Of Color.<br>Not you? <a href="">Here's other places you can signal boost!</a><br>Otherwise, <span class="teal">ItYou?</span><br> Haay fam! Fill out the below form!</p> <p class="summary">Questions or concerns? <a href="">Get at me!</a></p>
+        <p class="summary">Note: This is for Queer, Trans, Non-Binary folks who are Black or Non-Black People Of Color.<br>Not you? <a href="#">Here's other places you can signal boost!</a><em>*coming soon</em><br>Otherwise, <span class="teal">ItYou?</span><br> Haay fam! Fill out the below form!</p> <p class="summary">Questions or concerns? <a href="">Get at me!</a></p>
       </div>
       <div class="divider"></div>
       <div class="section">
